--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Idris <br/> Adeniran</h1>
-                            <p class="promo-block-text">Business Intelligence Analyst | Data Analyst  Certified Google Data Analytics Professional </p>
+                            <p class="promo-block-text">Business Intelligence Analyst | Data Analyst</p>
+                            <h3 class="promo-block-text">Google Certified Data Analytics Professional </h3>
                             <p class="promo-block-text"> <p style="color:greenyellow;font-size:25px;font-family: 'Courier New', Courier, monospace;"></4> <br/><i> Be data-driven, not gut-driven !!! </p>
                         </div>
                         <ul class="list-inline">
