--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>My submission for the KPMG Virtual Data Analytics Internship program. I built a dynamic dashboard for a hypothetical company's management to track the profitability of their customers based on sales data collected in real time.</p>
+                                                        <p>I underwent a Virtual Data Analytics Internship program organised by KPMG and forage, where I built a dynamic dashboard for a hypothetical company's management to track the profitability of their customers based on sales data collected in real time.</p>
                                                         <p>Kindly click below to view the dashboard.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="https://public.tableau.com/app/profile/idris.adesina.adeniran/viz/Sprocket_16503261224370/SprocketCustomerProfitability">Tableau dashboard</a></li>                                                            
