--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="https://public.tableau.com/app/profile/idris.adesina.adeniran/viz/CyclisticBike-Share_16540561459790/Dashboard1">Tableau visualization,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="https://medium.com/@iadeniran.hse/google-data-analytics-capstone-project-cyclistic-how-does-a-bike-share-navigate-speedy-success-304036d4f371">Medium blog,</a></li>
-                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">R code on Kaggle</a></li>
+                                                            <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="https://www.kaggle.com/code/idrisadeniran/google-data-analytics-capstone-project">R Code for data cleaning</a></li>
                                                         </ul>
                                                     </div>                                                
                                                 </div>
