--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <li><a href="https://twitter.com/aeedris" class="social-icons"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="https://github.com/idrisadeniran" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/idrisadeniran" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class=""></i></a></li>
+                            <li><a href="https://medium.com/@iadeniran.hse" class="fa-brands fa-medium"><i class=""></i></a></li>
                         </ul>
                     </div>
                 </div>
