--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             <p class="promo-block-text"> <p style="color:greenyellow;font-size:25px;font-family: 'Courier New', Courier, monospace;"></4> <br/><i> Be data-driven, not gut-driven !!! </p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://medium.com/@iadeniran.hse" class="social-icons"><i class="fa-brands fa-medium"></i></a></li>
+                            <li><a href="https://www.kaggle.com/idrisadeniran" class="social-icons"><i class="icon-social-kaggle"></i></a></li>
                             <li><a href="https://twitter.com/aeedris" class="social-icons"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="https://github.com/idrisadeniran" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/idrisadeniran" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href="https://medium.com/@iadeniran.hse" class="fa-brands fa-medium"><i class=""></i></a></li>
+                            <li><a href="https://www.medium.com/@iadeniran.hse" class="social-icons"><i class="icon-medium"></i></a></li>
                         </ul>
                     </div>
                 </div>
