--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <p style="color:rgb(12, 14, 10);">I'm not a very decisive person, so making decisions based on gut feelings is not my thing. Data, on the other hand, never lies, and allows you to make informed decisions.</p>
                             <p style="color:rgb(12, 14, 10);">Also having the opportunity to leverage current and historical data to make predictions about future events through predictive analysis is fascinating and makes me feel like Doctor Strange from the Avengers movie (but without the cape) !!!  </p>
                         </div>    
-                            <p style="color:rgb(12, 14, 10);">My Data Analytics Stack Includes: </p>
+                            <p style="color:rgb(12, 14, 10);">Tools I use: </p>
                         
 
                         <!-- Progress Box -->
@@ -134,27 +134,33 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>SQL <span class="color-heading pull-right">70%</span></h5>
+                            <h5>SQL <span class="color-heading pull-right">80%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Tableau <span class="color-heading pull-right">85%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Power BI <span class="color-heading pull-right">53%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="53"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>R Programming <span class="color-heading pull-right">70%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Tableau <span class="color-heading pull-right">71%</span></h5>
+                            <h5>Python Programming <span class="color-heading pull-right">70%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="71"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>Power BI <span class="color-heading pull-right">56%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="53"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>R Programming <span class="color-heading pull-right">60%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="53"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                             </div>
                         <!-- End Progress Box -->
                     </div>
